crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__anf__multiargument_recursion.snap
---
source: crates/nash-codegen/src/optimizer_tests/anf.rs
assertion_line: 74
expression: "format!(\"--- core before static lifting\\n{}\\n--- core after static lifting / before ANF\\n{}\\n--- core after ANF\\n{}\\n--- rewritten core (no second ANF)\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(fresh), pretty(lifted), pretty(first_anf), pretty(after),\nsemantic_output(&baseline), semantic_output(&normalized),)"
---
--- core before static lifting
letrec
  countdown#5 : int -> int -> int [static [0]] = \fixed#6 : int n#7 : int -> case@Bool equalsInteger n#7 0 of
    True -> fixed#6
    False -> countdown#5 fixed#6 (trace "next" in subtractInteger n#7 1)
in
countdown#5 (trace "fixed" in 42) (trace "initial" in 2)
--- core after static lifting / before ANF
let countdown#5 : int -> int -> int = \fixed#6 : int n#7 : int -> letrec
  worker#9 : int -> int [static []] = \n#8 : int -> case@Bool equalsInteger n#8 0 of
    True -> fixed#6
    False -> worker#9 (trace "next" in subtractInteger n#8 1)
in
worker#9 n#7 in
countdown#5 (trace "fixed" in 42) (trace "initial" in 2)
--- core after ANF
let countdown#5 : int -> int -> int = \fixed#6 : int n#7 : int -> letrec
  worker#9 : int -> int [static []] = \n#8 : int -> let anf#10 : bool = equalsInteger n#8 0 in
  case@Bool anf#10 of
    True -> fixed#6
    False -> let anf#11 : int = trace "next" in subtractInteger n#8 1 in
    worker#9 anf#11
in
worker#9 n#7 in
let anf#12 : int = trace "fixed" in 42 in
let anf#13 : int -> int = countdown#5 anf#12 in
let anf#14 : int = trace "initial" in 2 in
anf#13 anf#14
--- rewritten core (no second ANF)
let countdown#25 : int -> int -> int = \fixed#17 : int n#18 : int -> let worker#24 : int -> int = (\self#19 : @self (int -> int) -> self#19 self#19) (\self#20 : @self (int -> int) n#21 : int -> let anf#22 : bool = equalsInteger n#21 0 in
case@Bool anf#22 of
  True -> fixed#17
  False -> let anf#23 : int = trace "next" in subtractInteger n#21 1 in
  self#20 self#20 anf#23) in
worker#24 n#18 in
let anf#26 : int = trace "fixed" in 42 in
let anf#27 : int -> int = countdown#25 anf#26 in
let anf#28 : int = trace "initial" in 2 in
anf#27 anf#28
--- baseline
--- uplc
(program 1.1.0
  [(lam countdown_1
    [[countdown_1
      (force
        [[(force (builtin trace)) (con string "fixed")] (delay (con integer 42))])]
      (force
        [[(force (builtin trace)) (con string "initial")] (delay (con integer 2))])])
    (lam fixed_2
      (lam n_3
        [[(lam self_4 [self_4 self_4])
          (lam self_4
            (lam n_3
              (case
                [[(builtin equalsInteger) n_3] (con integer 0)]
                [[self_4 self_4]
                  (force
                    [[(force (builtin trace)) (con string "next")]
                      (delay [[(builtin subtractInteger) n_3] (con integer 1)])])]
                fixed_2)))]
          n_3]))])
--- result
(con integer 42)
--- logs
["fixed", "initial", "next", "next"]
--- candidate
--- uplc
(program 1.1.0
  [(lam countdown_25
    [(lam anf_26
      [(lam anf_27
        [(lam anf_28 [anf_27 anf_28])
          (force
            [[(force (builtin trace)) (con string "initial")] (delay (con integer 2))])])
        [countdown_25 anf_26]])
      (force
        [[(force (builtin trace)) (con string "fixed")] (delay (con integer 42))])])
    (lam fixed_17
      (lam n_18
        [(lam worker_24 [worker_24 n_18])
          [(lam self_19 [self_19 self_19])
            (lam self_20
              (lam n_21
                [(lam anf_22
                  (case
                    anf_22
                    [(lam anf_23 [[self_20 self_20] anf_23])
                      (force
                        [[(force (builtin trace)) (con string "next")]
                          (delay [[(builtin subtractInteger) n_21] (con integer 1)])])]
                    fixed_17))
                  [[(builtin equalsInteger) n_21] (con integer 0)]]))]]))])
--- result
(con integer 42)
--- logs
["fixed", "initial", "next", "next"]
