crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__anf__mutual_static_lift_fallback.snap
---
source: crates/nash-codegen/src/optimizer_tests/anf.rs
assertion_line: 74
expression: "format!(\"--- core before static lifting\\n{}\\n--- core after static lifting / before ANF\\n{}\\n--- core after ANF\\n{}\\n--- rewritten core (no second ANF)\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(fresh), pretty(lifted), pretty(first_anf), pretty(after),\nsemantic_output(&baseline), semantic_output(&normalized),)"
---
--- core before static lifting
letrec
  even#29 : int -> int -> int [static []] = \x#31 : int n#32 : int -> case@Bool equalsInteger n#32 0 of
    True -> x#31
    False -> odd#30 x#31 (subtractInteger n#32 1)
  odd#30 : int -> int -> int [static []] = \y#33 : int m#34 : int -> case@Bool equalsInteger m#34 0 of
    True -> y#33
    False -> even#29 y#33 (subtractInteger m#34 1)
in
even#29 42 3
--- core after static lifting / before ANF
letrec
  even#29 : int -> int -> int [static []] = \x#31 : int n#32 : int -> case@Bool equalsInteger n#32 0 of
    True -> x#31
    False -> odd#30 x#31 (subtractInteger n#32 1)
  odd#30 : int -> int -> int [static []] = \y#33 : int m#34 : int -> case@Bool equalsInteger m#34 0 of
    True -> y#33
    False -> even#29 y#33 (subtractInteger m#34 1)
in
even#29 42 3
--- core after ANF
letrec
  even#29 : int -> int -> int [static []] = \x#31 : int n#32 : int -> let anf#35 : bool = equalsInteger n#32 0 in
  case@Bool anf#35 of
    True -> x#31
    False -> let anf#36 : int -> int = odd#30 x#31 in
    let anf#37 : int = subtractInteger n#32 1 in
    anf#36 anf#37
  odd#30 : int -> int -> int [static []] = \y#33 : int m#34 : int -> let anf#38 : bool = equalsInteger m#34 0 in
  case@Bool anf#38 of
    True -> y#33
    False -> let anf#39 : int -> int = even#29 y#33 in
    let anf#40 : int = subtractInteger m#34 1 in
    anf#39 anf#40
in
even#29 42 3
--- rewritten core (no second ANF)
let dispatch#74 : @dispatch[(int, int) -> int, (int, int) -> int] = \request#57 : @request[(int, int) -> int, (int, int) -> int] -> case@Tag request#57 of
  0 self#58 x#59 n#60 -> let anf#61 : bool = equalsInteger n#60 0 in
  case@Bool anf#61 of
    True -> x#59
    False -> let anf#64 : int -> int = (\y#62 : int m#63 : int -> self#58 (constr 1 self#58 y#62 m#63)) x#59 in
    let anf#65 : int = subtractInteger n#60 1 in
    anf#64 anf#65
  1 self#66 y#67 m#68 -> let anf#69 : bool = equalsInteger m#68 0 in
  case@Bool anf#69 of
    True -> y#67
    False -> let anf#72 : int -> int = (\x#70 : int n#71 : int -> self#66 (constr 0 self#66 x#70 n#71)) y#67 in
    let anf#73 : int = subtractInteger m#68 1 in
    anf#72 anf#73 in
let even#77 : int -> int -> int = \x#75 : int n#76 : int -> dispatch#74 (constr 0 dispatch#74 x#75 n#76) in
let odd#80 : int -> int -> int = \y#78 : int m#79 : int -> dispatch#74 (constr 1 dispatch#74 y#78 m#79) in
even#77 42 3
--- baseline
--- uplc
(program 1.1.0
  [(lam dispatch_13
    [(lam even_1
      [(lam odd_2 [[even_1 (con integer 42)] (con integer 3)])
        (lam y_25 (lam m_26 [dispatch_13 (constr 1 dispatch_13 y_25 m_26)]))])
      (lam x_27 (lam n_28 [dispatch_13 (constr 0 dispatch_13 x_27 n_28)]))])
    (lam request_14
      (case
        request_14
        (lam self_15
          (lam x_3
            (lam n_4
              (case
                [[(builtin equalsInteger) n_4] (con integer 0)]
                [self_15
                  (constr 1 self_15 x_3 [[(builtin subtractInteger) n_4] (con integer 1)])]
                x_3))))
        (lam self_20
          (lam y_5
            (lam m_6
              (case
                [[(builtin equalsInteger) m_6] (con integer 0)]
                [self_20
                  (constr 0 self_20 y_5 [[(builtin subtractInteger) m_6] (con integer 1)])]
                y_5))))))])
--- result
(con integer 42)
--- logs
[]
--- candidate
--- uplc
(program 1.1.0
  [(lam dispatch_74
    [(lam even_77
      [(lam odd_80 [[even_77 (con integer 42)] (con integer 3)])
        (lam y_78 (lam m_79 [dispatch_74 (constr 1 dispatch_74 y_78 m_79)]))])
      (lam x_75 (lam n_76 [dispatch_74 (constr 0 dispatch_74 x_75 n_76)]))])
    (lam request_57
      (case
        request_57
        (lam self_58
          (lam x_59
            (lam n_60
              [(lam anf_61
                (case
                  anf_61
                  [(lam anf_64
                    [(lam anf_65 [anf_64 anf_65])
                      [[(builtin subtractInteger) n_60] (con integer 1)]])
                    [(lam y_62 (lam m_63 [self_58 (constr 1 self_58 y_62 m_63)])) x_59]]
                  x_59))
                [[(builtin equalsInteger) n_60] (con integer 0)]])))
        (lam self_66
          (lam y_67
            (lam m_68
              [(lam anf_69
                (case
                  anf_69
                  [(lam anf_72
                    [(lam anf_73 [anf_72 anf_73])
                      [[(builtin subtractInteger) m_68] (con integer 1)]])
                    [(lam x_70 (lam n_71 [self_66 (constr 0 self_66 x_70 n_71)])) y_67]]
                  y_67))
                [[(builtin equalsInteger) m_68] (con integer 0)]])))))])
--- result
(con integer 42)
--- logs
[]
