crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__anf__optimized_recursion_lowers_without_renormalizing_self_application.snap
---
source: crates/nash-codegen/src/optimizer_tests/anf.rs
assertion_line: 786
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- optimized\\n{}\",\npretty(core), pretty(after), semantic_output(&baseline),\nsemantic_output(&optimized),))"
---
--- unoptimized Core
letrec
  countdown#1 : int -> int [static []] = \n#2 : int -> case@Bool equalsInteger n#2 0 of
    True -> 42
    False -> countdown#1 (trace "step" in subtractInteger n#2 1)
in
countdown#1 2
--- unoptimized UPLC
(program 1.1.0
  [(lam countdown_1 [countdown_1 (con integer 2)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam n_2
          (case
            [[(builtin equalsInteger) n_2] (con integer 0)]
            [[self_3 self_3]
              (force
                [[(force (builtin trace)) (con string "step")]
                  (delay [[(builtin subtractInteger) n_2] (con integer 1)])])]
            (con integer 42))))]])
--- optimized Core
letrec
  countdown#3 : int -> int [static []] = \n#4 : int -> let anf#5 : bool = equalsInteger n#4 0 in
  case@Bool anf#5 of
    True -> 42
    False -> let anf#6 : int = trace "step" in subtractInteger n#4 1 in
    countdown#3 anf#6
in
countdown#3 2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_13
    [(lam countdown_12 [countdown_12 (con integer 2)])
      [(lam self_7 [self_7 self_7])
        (lam self_8
          (lam n_9
            [(lam anf_10
              (case
                anf_10
                [(lam anf_11 [[self_8 self_8] anf_11])
                  (force
                    [[builtin_13 (con string "step")]
                      (delay [[(builtin subtractInteger) n_9] (con integer 1)])])]
                (con integer 42)))
              [[(builtin equalsInteger) n_9] (con integer 0)]]))]])
    (force (builtin trace))])
--- isolated pass
--- core before
letrec
  countdown#1 : int -> int [static []] = \n#2 : int -> case@Bool equalsInteger n#2 0 of
    True -> 42
    False -> countdown#1 (trace "step" in subtractInteger n#2 1)
in
countdown#1 2
--- core after
let countdown#14 : int -> int = (\self#9 : @self (int -> int) -> self#9 self#9) (\self#10 : @self (int -> int) n#11 : int -> let anf#12 : bool = equalsInteger n#11 0 in
case@Bool anf#12 of
  True -> 42
  False -> let anf#13 : int = trace "step" in subtractInteger n#11 1 in
  self#10 self#10 anf#13) in
countdown#14 2
--- baseline
--- uplc
(program 1.1.0
  [(lam countdown_1 [countdown_1 (con integer 2)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam n_2
          (case
            [[(builtin equalsInteger) n_2] (con integer 0)]
            [[self_3 self_3]
              (force
                [[(force (builtin trace)) (con string "step")]
                  (delay [[(builtin subtractInteger) n_2] (con integer 1)])])]
            (con integer 42))))]])
--- result
(con integer 42)
--- logs
["step", "step"]
--- optimized
--- uplc
(program 1.1.0
  [(lam countdown_14 [countdown_14 (con integer 2)])
    [(lam self_9 [self_9 self_9])
      (lam self_10
        (lam n_11
          [(lam anf_12
            (case
              anf_12
              [(lam anf_13 [[self_10 self_10] anf_13])
                (force
                  [[(force (builtin trace)) (con string "step")]
                    (delay [[(builtin subtractInteger) n_11] (con integer 1)])])]
              (con integer 42)))
            [[(builtin equalsInteger) n_11] (con integer 0)]]))]])
--- result
(con integer 42)
--- logs
["step", "step"]
