crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__anf__recursive_countdown.snap
---
source: crates/nash-codegen/src/optimizer_tests/anf.rs
assertion_line: 53
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before static lifting\\n{}\\n--- core after static lifting / before ANF\\n{}\\n--- core after ANF\\n{}\\n--- rewritten core (no second ANF)\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(fresh), pretty(lifted), pretty(first_anf), pretty(after),\nsemantic_output(&baseline), semantic_output(&normalized),))"
---
--- unoptimized Core
letrec
  countdown#1 : int -> int [static []] = \n#2 : int -> trace "step" in case@Bool equalsInteger n#2 0 of
    True -> 42
    False -> countdown#1 (subtractInteger n#2 1)
in
countdown#1 2
--- unoptimized UPLC
(program 1.1.0
  [(lam countdown_1 [countdown_1 (con integer 2)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam n_2
          (force
            [[(force (builtin trace)) (con string "step")]
              (delay
                (case
                  [[(builtin equalsInteger) n_2] (con integer 0)]
                  [[self_3 self_3] [[(builtin subtractInteger) n_2] (con integer 1)]]
                  (con integer 42)))])))]])
--- optimized Core
letrec
  countdown#3 : int -> int [static []] = \n#4 : int -> trace "step" in let anf#5 : bool = equalsInteger n#4 0 in
  case@Bool anf#5 of
    True -> 42
    False -> let anf#6 : int = subtractInteger n#4 1 in
    countdown#3 anf#6
in
countdown#3 2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_13
    [(lam countdown_12 [countdown_12 (con integer 2)])
      [(lam self_7 [self_7 self_7])
        (lam self_8
          (lam n_9
            (force
              [[builtin_13 (con string "step")]
                (delay
                  [(lam anf_10
                    (case
                      anf_10
                      [(lam anf_11 [[self_8 self_8] anf_11])
                        [[(builtin subtractInteger) n_9] (con integer 1)]]
                      (con integer 42)))
                    [[(builtin equalsInteger) n_9] (con integer 0)]])])))]])
    (force (builtin trace))])
--- isolated pass
--- core before static lifting
letrec
  countdown#5 : int -> int [static []] = \n#6 : int -> trace "step" in case@Bool equalsInteger n#6 0 of
    True -> 42
    False -> countdown#5 (subtractInteger n#6 1)
in
countdown#5 2
--- core after static lifting / before ANF
letrec
  countdown#5 : int -> int [static []] = \n#6 : int -> trace "step" in case@Bool equalsInteger n#6 0 of
    True -> 42
    False -> countdown#5 (subtractInteger n#6 1)
in
countdown#5 2
--- core after ANF
letrec
  countdown#5 : int -> int [static []] = \n#6 : int -> trace "step" in let anf#7 : bool = equalsInteger n#6 0 in
  case@Bool anf#7 of
    True -> 42
    False -> let anf#8 : int = subtractInteger n#6 1 in
    countdown#5 anf#8
in
countdown#5 2
--- rewritten core (no second ANF)
let countdown#16 : int -> int = (\self#11 : @self (int -> int) -> self#11 self#11) (\self#12 : @self (int -> int) n#13 : int -> trace "step" in let anf#14 : bool = equalsInteger n#13 0 in
case@Bool anf#14 of
  True -> 42
  False -> let anf#15 : int = subtractInteger n#13 1 in
  self#12 self#12 anf#15) in
countdown#16 2
--- baseline
--- uplc
(program 1.1.0
  [(lam countdown_1 [countdown_1 (con integer 2)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam n_2
          (force
            [[(force (builtin trace)) (con string "step")]
              (delay
                (case
                  [[(builtin equalsInteger) n_2] (con integer 0)]
                  [[self_3 self_3] [[(builtin subtractInteger) n_2] (con integer 1)]]
                  (con integer 42)))])))]])
--- result
(con integer 42)
--- logs
["step", "step", "step"]
--- candidate
--- uplc
(program 1.1.0
  [(lam countdown_16 [countdown_16 (con integer 2)])
    [(lam self_11 [self_11 self_11])
      (lam self_12
        (lam n_13
          (force
            [[(force (builtin trace)) (con string "step")]
              (delay
                [(lam anf_14
                  (case
                    anf_14
                    [(lam anf_15 [[self_12 self_12] anf_15])
                      [[(builtin subtractInteger) n_13] (con integer 1)]]
                    (con integer 42)))
                  [[(builtin equalsInteger) n_13] (con integer 0)]])])))]])
--- result
(con integer 42)
--- logs
["step", "step", "step"]
