crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__anf__staged_application.snap
---
source: crates/nash-codegen/src/optimizer_tests/anf.rs
assertion_line: 53
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before static lifting\\n{}\\n--- core after static lifting / before ANF\\n{}\\n--- core after ANF\\n{}\\n--- rewritten core (no second ANF)\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(fresh), pretty(lifted), pretty(first_anf), pretty(after),\nsemantic_output(&baseline), semantic_output(&normalized),))"
---
--- unoptimized Core
(trace "function" in \x#1 : int -> trace "intermediate" in \y#2 : int -> y#2) (trace "first" in 1) (trace "second" in 42)
--- unoptimized UPLC
(program 1.1.0
  [[(force
    [[(force (builtin trace)) (con string "function")]
      (delay
        (lam x_1
          (force
            [[(force (builtin trace)) (con string "intermediate")] (delay (lam y_2 y_2))])))])
    (force [[(force (builtin trace)) (con string "first")] (delay (con integer 1))])]
    (force
      [[(force (builtin trace)) (con string "second")] (delay (con integer 42))])])
--- optimized Core
let anf#5 : int -> int -> int = trace "function" in \x#3 : int -> trace "intermediate" in \y#4 : int -> y#4 in
let anf#6 : int = trace "first" in 1 in
let anf#7 : int -> int = anf#5 anf#6 in
let anf#8 : int = trace "second" in 42 in
anf#7 anf#8
--- optimized UPLC
(program 1.1.0
  [(lam builtin_13
    [(lam anf_9
      [(lam anf_10
        [(lam anf_11
          [(lam anf_12 [anf_11 anf_12])
            (force [[builtin_13 (con string "second")] (delay (con integer 42))])])
          [anf_9 anf_10]])
        (force [[builtin_13 (con string "first")] (delay (con integer 1))])])
      (force
        [[builtin_13 (con string "function")]
          (delay
            (lam x_1
              (force [[builtin_13 (con string "intermediate")] (delay (lam y_2 y_2))])))])])
    (force (builtin trace))])
--- isolated pass
--- core before static lifting
(trace "function" in \x#3 : int -> trace "intermediate" in \y#4 : int -> y#4) (trace "first" in 1) (trace "second" in 42)
--- core after static lifting / before ANF
(trace "function" in \x#3 : int -> trace "intermediate" in \y#4 : int -> y#4) (trace "first" in 1) (trace "second" in 42)
--- core after ANF
let anf#5 : int -> int -> int = trace "function" in \x#3 : int -> trace "intermediate" in \y#4 : int -> y#4 in
let anf#6 : int = trace "first" in 1 in
let anf#7 : int -> int = anf#5 anf#6 in
let anf#8 : int = trace "second" in 42 in
anf#7 anf#8
--- rewritten core (no second ANF)
let anf#11 : int -> int -> int = trace "function" in \x#9 : int -> trace "intermediate" in \y#10 : int -> y#10 in
let anf#12 : int = trace "first" in 1 in
let anf#13 : int -> int = anf#11 anf#12 in
let anf#14 : int = trace "second" in 42 in
anf#13 anf#14
--- baseline
--- uplc
(program 1.1.0
  [[(force
    [[(force (builtin trace)) (con string "function")]
      (delay
        (lam x_1
          (force
            [[(force (builtin trace)) (con string "intermediate")] (delay (lam y_2 y_2))])))])
    (force [[(force (builtin trace)) (con string "first")] (delay (con integer 1))])]
    (force
      [[(force (builtin trace)) (con string "second")] (delay (con integer 42))])])
--- result
(con integer 42)
--- logs
["function", "first", "intermediate", "second"]
--- candidate
--- uplc
(program 1.1.0
  [(lam anf_11
    [(lam anf_12
      [(lam anf_13
        [(lam anf_14 [anf_13 anf_14])
          (force
            [[(force (builtin trace)) (con string "second")] (delay (con integer 42))])])
        [anf_11 anf_12]])
      (force [[(force (builtin trace)) (con string "first")] (delay (con integer 1))])])
    (force
      [[(force (builtin trace)) (con string "function")]
        (delay
          (lam x_9
            (force
              [[(force (builtin trace)) (con string "intermediate")] (delay (lam y_10 y_10))])))])])
--- result
(con integer 42)
--- logs
["function", "first", "intermediate", "second"]
